# server/models/jobrequisition.model.js
@@ -115,6 +115,18 @@ const JobRequisitionSchema = new mongoose.Schema({
   connection: {
     type: Object,
     required: false
+  },
+  city: {
+    type: String,
+    required: true
+  },
+  state: {
+    type: String,
+    required: true
+  },
+  country: {
+    type: String,
+    required: true
   }
 }, {
   versionKey: false
